add_library(dependency_modem "modem.cpp")
add_library(dependency::modem ALIAS dependency_modem)
target_include_directories(dependency_modem PRIVATE "./" "include/modem/")
target_include_directories(dependency_modem PUBLIC "include/")
target_link_libraries(dependency_modem PUBLIC dependency::io)
target_link_libraries(dependency_modem PUBLIC dependency::format::at)
target_link_libraries(dependency_modem PUBLIC dependency::scheduler)
target_link_libraries(dependency_modem PUBLIC dependency::loglet)
target_link_libraries(dependency_modem PUBLIC dependency::core)

setup_target(dependency_modem)
